# BugAnalyzerAI

./: README.md  pyproject.toml
src/ai_bug_analyzer/: main.py
src/ai_bug_analyzer/agents/: failure_classification_agent.py  fix_planning_agent.py  patch_generation_agent.py
src/ai_bug_analyzer/app/: bootstrap.py  config.py  graph.py  state.py
src/ai_bug_analyzer/app/domain/: models.py
src/ai_bug_analyzer/domain/: enums.py  models.py  schemas.py
src/ai_bug_analyzer/infrastructure/llm/: factory.py
src/ai_bug_analyzer/infrastructure/logging/: setup.py
src/ai_bug_analyzer/infrastructure/persistence/: checkpointing.py
src/ai_bug_analyzer/nodes/: apply_patch_node.py  classify_failure_node.py  finalize_node.py  generate_patch_node.py  plan_fix_node.py  run_target_node.py  verify_result_node.py
src/ai_bug_analyzer/tools/: codebase_tools.py  command_tools.py  file_tools.py  patch_tools.py
src/domain/: models.py
