[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bug-analyzer"
version = "0.1.0"
description = "AI-powered bug analysis and repair workflow for Python projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langgraph",
    "langchain-openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
